Improved rendering of task detail ( images no longer overflow width of the screen )

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,2 +1,3 @@
 .top-buffer { margin-top: 20px; }
 .top-buffer-5 { margin-top: 5px; }
+img { max-width: 100%; }
